# Elixir

./: .appveyor.yml  .cirrus.yml  .fuzzbuzz.yml  .gitignore  .travis.yml  CODEOWNERS  CONTRIBUTING.md  COPYING  Dockerfile  INSTALL.md  Makefile.am  README.md  REVIEWERS  SECURITY.md  autogen.sh  configure.ac  libelixirconsensus.pc.in  run-docker.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  elixir.sln  elixir_config.h  msvc-autogen.py  vcpkg.json
ci/: lint_run_all.sh  test_run_all.sh
contrib/: README.md  elixir-cli.bash-completion  elixir-qt.pro  elixir-tx.bash-completion  elixird.bash-completion  filter-lcov.py  gitian-build.py  install_db4.sh  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  elixir-conf.md  external-signer.md  files.md  fuzzing.md  gitian-building.md  guix.md  init.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  elixir-cli.1  elixir-qt.1  elixir-tx.1  elixir-util.1  elixir-wallet.1  elixird.1
share/: genbuild.sh  setup.nsi.in
(+1412 files in other folders)
