dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=elixird.1
endif

if ENABLE_QT
  dist_man1_MANS+=elixir-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=elixir-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=elixir-tx.1
endif

if BUILD_BITCOIN_UTIL
  dist_man1_MANS+=elixir-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=elixir-wallet.1
endif
endif
